# Noon-libqt

./: CMakeLists.txt  README.md
plugins/lib/qtqr/: CMakeLists.txt
plugins/services/: clipboard.cpp  clipboard.hpp  resources.cpp  resources.hpp
plugins/utils/: highlighter.cpp  highlighter.hpp  hyprparser.cpp
plugins/utils/latex/: CMakeLists.txt  latex_renderer.cpp
plugins/utils/qr/: CMakeLists.txt  qrcode.cpp
src/: CMakeLists.txt
src/lib/microtex/: CMakeLists.txt
src/services/: CMakeLists.txt
src/utils/: CMakeLists.txt  cava_watcher.cpp  cava_watcher.hpp  hyprparser.hpp
src/utils/latex/: CMakeLists.txt  latex_renderer.hpp
src/utils/qr/: qrcode.hpp
